[gd_scene format=3 uid="uid://lnem5iwj8wl2"]

[ext_resource type="Script" uid="uid://cbtx0jcb7wqnb" path="res://scripts/ui/PlatformSlider.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_container"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.08, 0.08, 0.08, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scrub"]
bg_color = Color(0.15, 0.15, 0.15, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cap"]
bg_color = Color(0, 0.6, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_normal"]
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.18, 0.18, 0.18, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_pressed"]
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.38, 0.38, 0.38, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.28, 0.28, 0.28, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="PlatformSlider" type="Control" unique_id=1949533470]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1")

[node name="Container" type="PanelContainer" parent="." unique_id=132484078]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_right = -16.0
theme_override_styles/panel = SubResource("StyleBoxFlat_container")

[node name="Layout" type="HBoxContainer" parent="Container" unique_id=1306869338]
layout_mode = 2

[node name="ScrubArea" type="PanelContainer" parent="Container/Layout" unique_id=904842197]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_scrub")

[node name="Fill" type="ColorRect" parent="Container/Layout/ScrubArea" unique_id=1382474972]
layout_mode = 2
color = Color(0, 0.6, 1, 1)

[node name="Cap" type="Panel" parent="Container/Layout/ScrubArea" unique_id=1352192974]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cap")

[node name="ApplyButton" type="Button" parent="Container/Layout" unique_id=359506941]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "APPLY"
